# stylometry

./: .env.example  .gitignore  README.md  pyproject.toml  repo.md  setup_runpod.sh  summary.md
configs/: base.yaml
configs/experiments/: example_luar.yaml  roberta_frozen.yaml  roberta_lora_contrastive.yaml  roberta_lora_supcon.yaml  roberta_lora_triplet.yaml  v2_luar_frozen_proj.yaml  v2_luar_lora.yaml  v2_mpnet_frozen_proj.yaml  v2_mpnet_lora_proj.yaml  v3_mpnet_lora.yaml  v3_roberta_lora.yaml  v4_luar_lora_syn.yaml  v4_roberta_lora_syn.yaml  v5_luar_lora.yaml  v5_luar_lora_syn.yaml  v5_roberta_lora.yaml  v5_roberta_lora_syn.yaml  v6_luar_frozen.yaml  v6_luar_frozen_syn.yaml  v6_luar_lora.yaml  v6_luar_lora_syn.yaml
dan_files/: build_test_set.py  data_cleaning.py
data/: README.md
docs/: steps.md  wandb_metrics.md
results/: Email Fraud Detection Export May 2 2026.csv  WandB Export May 2 2026 (1).csv  WandB Export May 2 2026 (2).csv  WandB Export May 2 2026 (3).csv  WandB Export May 2 2026.csv
runs/minilm_m5/2026-04-29_19-12-10/: config.yaml
runs/mpnet_frozen/2026-05-02_01-06-35/: config.yaml
runs/mpnet_frozen/2026-05-02_16-13-37/: config.yaml
scripts/: download_and_test.sh  eval_checkpoint.py  evaluate.py  generate_synthetic_emails.py  prepare_data.py  preview_synthetic_emails.py  run_experiments.sh  run_experiments_v2.sh  run_experiments_v3.sh  run_experiments_v4.sh  run_experiments_v5.sh  run_experiments_v6.sh  score_centroids.py  train.py
src/email_fraud/: README.md  __init__.py  config.py  registry.py
tests/: test_registry.py
(+45 files in other folders)
