[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-fraud"
version = "0.1.0"
description = "Contrastive sender fingerprinting and email impersonation detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.10",
    "datasets>=2.18",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "wandb>=0.17",
    "pydantic>=2.6",
    "omegaconf>=2.3",
    "PyYAML>=6.0",
    "faiss-cpu>=1.8",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "ftfy>=6.1",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]   # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
